refactor: use string templates