@@ -35,7 +35,7 @@ class ApplyThreeYearsAnniversaryDiscountTest {
         var subscriptionsWithThreeYearsDiscount = tested.handle(
             new ApplyThreeYearsAnniversaryDiscount(LocalDate.parse("2018-07-12"))
         );
-        assertEquals(1111.5, subscriptionsWithThreeYearsDiscount.get(subscriptionsWithThreeYearsDiscount.size() - 1).price.amount());
+        assertEquals(1111.5, subscriptionsWithThreeYearsDiscount.getLast().price.amount());
 
         var subscriptionsAfterThreeYearsAnniversary = tested.handle(
             new ApplyThreeYearsAnniversaryDiscount(LocalDate.parse("2018-07-09"))
